fix(.bg-text): set align items to flex-start

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -19,5 +19,5 @@
   letter-spacing: -0.02em;
   color: #171717;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
 }
